--- a/schedule.html
+++ b/schedule.html
@@ -40,8 +40,8 @@
       <div id="content">
 
         <p>The course meets Tuesdays and Thursdays 9-10:30 am in Broad 100.</p> <br />
-        <p>TA office hours are Mondays 9–10 am and and Fridays 2–3 pm in B123 Kerckhoff.</p> <br />
-        <p>Instructor office hours are Wednesdays 1-2 pm in B123 Kerckhoff.</p> <br />
+        <p>TA office hours are TBA.</p> <br />
+        <p>Instructor office hours are Wednesdays 2-3 pm in B123 Kerckhoff.</p> <br />
 
         <p>The due dates and schedule below are tentative and subject to change.</p>
 
