Added HWs 3 and 4

--- a/people.html
+++ b/people.html
@@ -50,16 +50,16 @@
 	<h1>TAs</h1>
 
   <p>Catherine Griffin</p>
-  <p>Office hours: TBD</p>
+  <p>Office hours: Mondays, 2:30–4 pm</p>
   <br />
 
 	<p>Dillan Lau</p>
-  <p>Office hours: TBD</p>
+  <p>Office hours: Fridays, 2:30–4 pm</p>
 
       </div> <!-- End of content div -->
 
       <div id="footer">
-	<p class="alignright">Last updated: January 4, 2026</p>
+	<p class="alignright">Last updated: January 19, 2026</p>
       </div>
     </div><!-- end of wrap div -->
 </body></html>
