--- a/schedule.html
+++ b/schedule.html
@@ -40,7 +40,7 @@
       <div id="content">
 
         <p>The course meets Tuesdays and Thursdays 9-10:30 am in Broad 100.</p> <br />
-        <p>TA office hours are TBA.</p> <br />
+        <p>TA office hours are 2:30–4 pm on Mondays (in B127 Kerckhoff) and Fridays (in B123 Kerckhoff).</p> <br />
         <p>Instructor office hours are Wednesdays 2-3 pm in B123 Kerckhoff.</p> <br />
 
         <p>The due dates and schedule below are tentative and subject to change.</p>
